added a nav bar, disabled navy blue hero bg

--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -16,6 +16,9 @@ section.contact {
 }
 
 .contact {
+  padding-top: 0rem;
+  margin-top: 6rem;
+  //padding-bottom: 4rem;
   background: $grey;
   //background: linear-gradient( $off-white 40%, $navy 90% ); /* Standard syntax */
 
