--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<section class="contact">
+<section class="contact" id="contact">
   <div class="content">
     <div class="half-page">
       <header>
@@ -13,7 +13,7 @@
     </div>
 
     <div class="half-page">
-      <img alt="An image of a woman in the woods holding a glowing yellow orb in the palms of her hands" src="assets/images/footer/dazzling-face.gif" />
+      <img alt="An image of a woman in the woods holding a glowing yellow orb in the palms of her hands" src="assets/images/footer/dazzling.gif" />
     </div>
   
   </div>
