--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,7 @@
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
+
+  <script src="./assets/jquery-3.2.1.min.js"></script> 
+  <script src="./assets/script.js"></script> 
 </head>
