changed weight of bolded text

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
     <div class="half-page">
       <header>
         <h1>Ready to be dazzled?</h1>
-        <p>Let's make magic together. <br /> Shoot us a message, and we’ll get in touch.</p>
+        <p>Let's make <b>magic</b> together. <br /> Shoot us a message, and we’ll get in touch.</p>
       </header>
       
       <div class="contact-buttons">
