--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@ layout: default
   <section id="team">
     <header>
       <h1><span id="sparkle emoji" style="font-style: normal;">✨</span> The Ultimate Dream Team</h1>
-      <p>We’re here for you. Are you plotting to take over the world? Count us in...we’ll bring our design flair and visionary ideas. Aiming a little lower? We can start small and aim for your industry.</p>
+      <p>We’re here for you. Are you plotting to take over the world? Count us in...we’ll bring our <b>design flair</b> and <b>visionary ideas</b>. Aiming a little lower? We can start small and aim for your industry.</p>
     </header>
 
     <div class="content">
