--- a/_sass/partials/_side-module.scss
+++ b/_sass/partials/_side-module.scss
@@ -1,11 +1,12 @@
 @import "base";
 
 $base-icon-size: 14rem;
+$base-module-height: 17rem;
 $base-icon-offset: 45rem;
 $base-button-offset: 25rem;
 $base-icon-bg-size: 10.5rem; // 11 for JT
 $base-text-padding: 8rem;
-$base-li-padding: 3rem;
+$base-li-padding: 6rem;
 $base-button-width: 12rem;
 
 $base-xxl-offset: 68rem;
@@ -80,7 +81,7 @@ $module-text-base-height: 14rem;
         align-items: center;
         //width: $module-text-base-width  * $xxl-multiplier;
         width: 58rem;
-        height: $base-icon-size  * $xxl-multiplier;
+        height: $base-module-height  * $xxl-multiplier;
         background: $grey;
         text-align: left;
       }
@@ -102,7 +103,8 @@ $module-text-base-height: 14rem;
         margin-top: $xxl-px;
       }
 
-      p {
+      //p {
+      .module-content {
         width: 50%;
         padding-left: $base-text-padding  * $xxl-multiplier;
       }
@@ -114,7 +116,8 @@ $module-text-base-height: 14rem;
         text-align: right;
       }
 
-      p {
+      //p {
+      .module-content {
         margin-left: auto;
         padding-right: $base-text-padding  * $xxl-multiplier;
       }
@@ -175,7 +178,7 @@ $module-text-base-height: 14rem;
 
       .module-text {
         width: $module-text-base-width  * $xl-multiplier;
-        height: $base-icon-size  * $xl-multiplier;
+        height: $base-module-height  * $xl-multiplier;
       }
 
       .blue-line {
@@ -184,14 +187,16 @@ $module-text-base-height: 14rem;
         margin-top: $xl-px;
       }
 
-      p {
+      //p {
+      .module-content {
         width: 50%;
         padding-left: $base-text-padding  * $xl-multiplier;
       }
     }
 
     li:nth-child(even) {
-      p {
+      //p {
+      .module-content {
         padding-right: $base-text-padding  * $xl-multiplier;
       }
 
@@ -251,7 +256,7 @@ $module-text-base-height: 14rem;
 
       .module-text {
         width: $module-text-base-width;
-        height: $base-icon-size;
+        height: $base-module-height;
       }
 
       .blue-line {
@@ -260,14 +265,16 @@ $module-text-base-height: 14rem;
         margin-top: $base-px;
       }
 
-      p {
+      //p {
+      .module-content {
         width: 50%;
         padding-left: $base-text-padding;
       }
     }
 
     li:nth-child(even) {
-      p {
+      //p {
+      .module-content {
         padding-right: $base-text-padding;
       }
 
@@ -350,6 +357,38 @@ $module-text-base-height: 14rem;
   }
 }
 
+@media only screen and (max-width: 626px) { 
+  #team {
+    .icon {
+      right: 22rem;
+    }
+
+    button {
+      right: 2rem;
+    }
+
+    li {
+      .module-text {
+        width: 27rem;
+      }
+
+      .blue-line {
+        width: 27rem;
+      }
+    }
+
+    li:nth-child(even) {
+      .icon {
+        left: 22rem;
+      }
+
+      button {
+        left: 2rem;
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 585px) { 
   #team { 
     .icon {
@@ -369,7 +408,8 @@ $module-text-base-height: 14rem;
         width: 25rem;
       }
 
-      p {
+      //p {
+      .module-content {
         padding-left: 10rem;
       }
     }
@@ -383,7 +423,8 @@ $module-text-base-height: 14rem;
         left: 2rem;
       }
 
-      p {
+      //p {
+      .module-content {
         padding-left: 0rem;
         padding-right: 10rem;
       }
@@ -391,7 +432,7 @@ $module-text-base-height: 14rem;
   }
 }
 
-@media only screen and (max-width: 446px) { 
+/*@media only screen and (max-width: 446px) { 
   #team {
     .icon {
       right: 13rem;
@@ -406,7 +447,8 @@ $module-text-base-height: 14rem;
         width: 20rem;
       }
 
-      p {
+      //p {
+      .module-content {
         padding-left: 8rem;
       }
     }
@@ -416,25 +458,22 @@ $module-text-base-height: 14rem;
         left: 13rem;
       }
 
-      p {
+      //p {
+      .module-content {
         padding-left: 0;
         padding-right: 8rem;
       }
     }
   }
-}
+}*/
 
 //@media only screen and (max-width: 414px) {
-@media only screen and (max-width: $sm-breakpoint) {
+@media only screen and (max-width: 479px) {
   #team { 
 
     ul {
       margin-top: -3rem;
       margin-bottom: 15rem;
-    }
-
-    .icon-container {
-      height: $base-icon-size * $sm-multiplier;
     }
 
     .icon {
@@ -446,11 +485,6 @@ $module-text-base-height: 14rem;
       //top: 10;
       //right: 0;
       z-index: 3;
-      width: $base-icon-size * $sm-multiplier;
-      height: $base-icon-size * $sm-multiplier;
-
-      background-size: $base-icon-bg-size * $sm-multiplier;
-      background-position: 50% ( 2.5rem  * $sm-multiplier );
     }
 
     /*#Janny-icon {
@@ -461,37 +495,31 @@ $module-text-base-height: 14rem;
     button {
       margin: 0 auto;
       position: static;
-      width: $base-button-width * $sm-multiplier;
-      //margin-top: -( ( $base-icon-size  * $sm-multiplier ) / 8);
       margin-top: -3rem;
       z-index: 3;
       //right: 0;
-      //right: $base-button-offset  * $sm-multiplier;
     }
 
     li {
-      padding-bottom: $base-li-padding  * $sm-multiplier;
-      margin-bottom: 8rem;
+      margin-bottom: 12rem;
 
       .module-text {
         z-index: 1;
         margin: 0 auto;
         position: static;
         width: 90%;
-        height: $base-icon-size  * $sm-multiplier;
         padding-top: 3rem;
         margin-top: -6rem;
       }
 
       .blue-line {
         margin: 0 auto;
-        height: $sm-px;
         background: $blue;
         width: 90%;
-        margin-top: $sm-px;
       }
 
-      p {
+      //p {
+      .module-content {
         text-align: center;
         width: 75%;
         padding-right: 0;
@@ -511,64 +539,35 @@ $module-text-base-height: 14rem;
 
       .blue-line {
         margin: 0 auto;
-        margin-top: $sm-px;
       }
 
       .icon {
         left: 0;
       }
 
-      p {
+      //p {
+      .module-content {
         width: 75%;
         margin-right: auto;
         padding-left: 0;
         padding-right: 0;
-      }
-
-      /*.icon {
-        left: $base-icon-offset  * $xxl-multiplier;
-      }
-
-      button {
-        left: $base-button-offset  * $xxl-multiplier;
-      }
-
-      .blue-line {
-        margin-left: 0;
-      }*/
+      } 
     }
-
-    /*li:nth-child(even) {
-      p {
-        padding-right: $base-text-padding  * $sm-multiplier;
-      }
-
-      .blue-line {
-        margin-left: 0;
-      }
-
-      .icon {
-        left: 0;
-        //left: $base-icon-offset  * $sm-multiplier;
-      }
-
-      button {
-        //left: 0;
-        //left: $base-button-offset  * $sm-multiplier;
-      }
-    }*/
   }
 }
 
-/*@media only screen and (max-width: 375px) {
+@media only screen and (max-width: $sm-breakpoint) {
   #team { 
+    ul {
+      margin-top: -3rem;
+      margin-bottom: 15rem;
+    }
+    
     .icon-container {
       height: $base-icon-size * $sm-multiplier;
-      padding-bottom: 1.5rem;
     }
 
     .icon {
-      right: $base-icon-offset * $sm-multiplier;
       width: $base-icon-size * $sm-multiplier;
       height: $base-icon-size * $sm-multiplier;
 
@@ -576,90 +575,30 @@ $module-text-base-height: 14rem;
       background-position: 50% ( 2.5rem  * $sm-multiplier );
     }
 
-    #Janny-icon {
-      background-size: ( $base-icon-bg-size + 1rem ) * $sm-multiplier;
-      background-position: 75% ( 2.25rem * $sm-multiplier );
-    }
-
     button {
       width: $base-button-width * $sm-multiplier;
-      right: ( $module-text-base-width / 4 ) * $sm-multiplier;
-      margin-top: -( ( $base-icon-size * $sm-multiplier ) / 8);
+      //margin-top: -( ( $base-icon-size  * $sm-multiplier ) / 8);
+      //right: 0;
+      //right: $base-button-offset  * $sm-multiplier;
     }
 
     li {
-      padding-bottom: $base-li-padding;
+      padding-bottom: $base-li-padding  * $sm-multiplier;
 
       .module-text {
-        width: $module-text-base-width * $sm-multiplier;
-        height: $base-icon-size * $sm-multiplier;
+        height: $base-module-height  * $sm-multiplier;
       }
 
       .blue-line {
         height: $sm-px;
-        background: $blue;
-        width: $module-text-base-width * $sm-multiplier;
         margin-top: $sm-px;
       }
-
-      p {
-        padding-left: $base-text-padding * $sm-multiplier;
-      }
     }
 
     li:nth-child(even) {
-      p {
-        padding-right: $base-text-padding * $sm-multiplier;
-      }
-
       .blue-line {
-        margin-left: 0;
-      }
-
-      .icon {
-        left: $base-icon-offset * $sm-multiplier;
-      }
-
-      button {
-        left: ( $module-text-base-width / 4 ) * $sm-multiplier;
+        margin-top: $sm-px;
       }
     }
   }
-}*/
-
-/*@media only screen and (max-width: 411px) { 
-  #team {
-    .icon {
-      right: 10rem;
-    }
-
-    li {
-      .module-text {
-        width: 18rem;
-      }
-
-      .blue-line {
-        width: 18rem;
-      }
-
-      p {
-        padding-left: 9rem;
-      }
-    }
-
-    li:nth-child(even) {
-      .icon {
-        left: 10rem;
-      }
-
-      .blue-line {
-        margin-left: 0;
-      }
-
-      p {
-        padding-left: 0;
-        padding-right: 9rem;
-      }
-    }
-  }
-}*/
+}
