--- a/_sass/partials/_small-module.scss
+++ b/_sass/partials/_small-module.scss
@@ -7,8 +7,8 @@
 $icon-size: 11rem;
 $module-height: 13rem;
 $module-width: 18%;
-$module-min-width: 14rem;
-$module-padding: 1rem;
+$module-min-width: 13rem;
+$module-padding: 1.5rem;
 $module-margin: 0.75rem;
 $module-margin-top: -($icon-size / 2);
 $module-padding-top: ($icon-size / 2);
@@ -49,6 +49,10 @@ $module-text-padding-top: ($icon-size + 1);
       margin-top: $module-margin-top * $xxl-multiplier; 
       padding-top: $module-padding-top * $xxl-multiplier; 
       z-index: 1;
+
+      p {
+        //text-align: justify;
+      }
     }
 
    .blue-line {
