centered side module icons

--- a/_sass/partials/_side-module.scss
+++ b/_sass/partials/_side-module.scss
@@ -44,6 +44,7 @@ $module-text-base-height: 14rem;
       //right: $base-icon-offset * $xxl-multiplier;
       //right: $base-xxl-offset * $xxl-multiplier;
       right: 51rem;
+      margin-top: 1.5rem;
       width: $base-icon-size * $xxl-multiplier;
       height: $base-icon-size * $xxl-multiplier;
       background: $navy;
