--- a/_sass/partials/_small-module.scss
+++ b/_sass/partials/_small-module.scss
@@ -53,7 +53,7 @@ $module-text-padding-top: ($icon-size + 1);
       z-index: 1;
 
       p {
-        //text-align: justify;
+        text-align: left;
       }
     }
 
