--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -44,6 +44,15 @@ $base-h2-line-height: 2rem;
     font-weight: 500;
   }
 
+  h4 {
+    font-family: $header-font-family;
+    font-size: $base-font-size * 1.1;
+    font-style: italic;
+    font-weight: normal;
+    margin-top: -.5rem;
+    margin-bottom: -.5rem;
+  }
+
   p {
     line-height: $base-line-height * $xxl-multiplier;
   }
