additional small module formatting

--- a/_sass/partials/_side-module.scss
+++ b/_sass/partials/_side-module.scss
@@ -106,7 +106,8 @@ $module-text-base-height: 14rem;
 
       //p {
       .module-content {
-        width: 50%;
+        width: 65%;
+        //width: 50%;
         padding-left: $base-text-padding  * $xxl-multiplier;
       }
     }
@@ -190,7 +191,8 @@ $module-text-base-height: 14rem;
 
       //p {
       .module-content {
-        width: 50%;
+        width: 65%;
+        //width: 50%;
         padding-left: $base-text-padding  * $xl-multiplier;
       }
     }
@@ -268,7 +270,8 @@ $module-text-base-height: 14rem;
 
       //p {
       .module-content {
-        width: 50%;
+        width: 65%;
+        //width: 50%;
         padding-left: $base-text-padding;
       }
     }
