--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@ layout: default
   <section id="team">
     <header>
       <h1>The Ultimate Dream Team</h1>
-      <p>Plotting to take over the world? Count us in...we’ll bring our <b>design flair</b> and <b>visionary ideas</b>. Shooting a little lower? We can start small and aim for your industry.</p>
+      <p>Plotting to take over the world? Count us in...we’ll bring our design flair and visionary ideas. Shooting a little lower? We can start small and aim for your industry.</p>
     </header>
 
     <div class="content">
