--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,3 +1,3 @@
 <footer>
-  <p>&copy; {{ site.title | escape }} {{ site.time | date: '%Y' }}</p>
+  <p>&copy; {{ site.time | date: '%Y' }} {{ site.title | escape }}</p>
 </footer>
