--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,64 +1,85 @@
 <header id="hero">
   <div id="lights" class="svg-container">
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink= "http://www.w3.org/1999/xlink" width="100%" height="100%">
+      <filter id="light-blur">
+        <feGaussianBlur in="SourceGraphic" stdDeviation="0" />
+      </filter>
+      
+      <filter id="glow-blur">
+        <feGaussianBlur in="SourceGraphic" stdDeviation="3" />
+      </filter>
+      
       <circle class="light-base light light-1"  
         r="1%" 
         cx="30%" 
         cy="40%"
-      />
+      filter="url(#light-blur)" />
+
       <circle class="light-glow light light-1" 
         r="2%"
         cx="30%" 
         cy="40%"
-      />
+      filter="url(#glow-blur)" />
 
       <circle class="light-base light light-2"  
         r="2%" 
         cx="85%" 
         cy="55%"
-      />
+      filter="url(#light-blur)" />
+
       <circle class="light-glow light light-2" 
         r="4%"
         cx="85%" 
         cy="55%"
-      />
+      filter="url(#glow-blur)" />
 
       <circle class="light-base light light-3"  
         r="1.5%"
         cx="85%" 
-        cy="15%"/>
+        cy="15%"
+      filter="url(#light-blur)" />
+
       <circle class="light-glow light light-3" 
         r="3%"
         cx="85%" 
         cy="15%"
-      />
+      filter="url(#glow-blur)" />
 
       <circle class="light-base light light-4"  
         r="2%"
         cx="20%" 
-        cy="20%"/>
+        cy="20%"
+      filter="url(#light-blur)" />
+
       <circle class="light-glow light light-4" 
         r="4%"
         cx="20%" 
-        cy="20%"/>
+        cy="20%"
+      filter="url(#glow-blur)" />
 
       <circle class="light-base light light-5"  
         r="1.5%"
         cx="10%" 
-        cy="70%"/>
+        cy="70%"
+      filter="url(#light-blur)" />
+
       <circle class="light-glow light light-5" 
         r="3%"
         cx="10%" 
-        cy="70%"/>
+        cy="70%"
+      filter="url(#glow-blur)" />
 
-        <circle class="light-base light light-6"  
+      <circle class="light-base light light-6"  
         r="2%"
         cx="50%" 
-        cy="80%"/>
+        cy="80%"
+      filter="url(#light-blur)" />
+
       <circle class="light-glow light light-6" 
         r="4%"
         cx="50%" 
-        cy="80%"/>
+        cy="80%"
+      filter="url(#glow-blur)" />
     </svg>
   </div>
 
