updated details button to proper form

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
       </header>
       
       <div class="contact-buttons">
-        <a href="http://bewildercreative.typeform.com/to/Oja7lk" target="_blank"><button class="highlight">Give us the details</button></a>
+        <a href="http://bewildercreative.typeform.com/to/M8cOcz" target="_blank"><button class="highlight">Give us the details</button></a>
         <a href="mailto:hello@bewildercreative.co" target="_blank"><button>Send an e-mail</button></a>
       </div>
     </div>
