--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,6 +35,20 @@ layout: default
 
   </section>
 
+  <section id="instagram-widget">
+    <header>
+      <h1>What's new with us</h1>
+      <p>Want to find out what we've been up to? See our works in progress and get to know us a little better.</p>
+    </header>
+    
+    <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/7bb8cd77915f57e0b42948b2f194ce5b.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 70%; border: 0; overflow: hidden;"></iframe>
+
+    <br />
+
+
+    <a target="_blank" href="http://www.instagram.com/bewildercreative/"><button>Follow us on Instagram</button></a>
+  </section>
+
   <section id="team">
     <header>
       <h1>The Ultimate Dream Team</h1>
